tests/suite/fail/generated/types/fail_add_bool_bool.ny
fn main() {
    let _ = true + true //~ ERROR type mismatch in `arithmetic` operation
}
